# datacentric-cpp

./: README.md
cpp/: CMakeLists.txt  DataCentric.Cpp.sln
cpp/src/: CMakeLists.txt
cpp/src/datacentric-cli/dc/cli/: CMakeLists.txt  DataCentric.Cli.Cpp.vcxproj  declare.hpp  implement.hpp  import.hpp  main.cpp  precompiled.cpp  precompiled.hpp
cpp/src/datacentric-cli/dc/cli/commands/: Run.cpp  Run.hpp
cpp/src/datacentric-test/dc/test/: CMakeLists.txt  DataCentric.Test.Cpp.vcxproj  MongoTest.cpp  declare.hpp  implement.hpp  import.hpp  main.cpp
cpp/src/datacentric/dc/: CMakeLists.txt  DataCentric.Cpp.vcxproj  core.hpp  declare.hpp  implement.hpp  import.hpp  precompiled.cpp  precompiled.hpp
cpp/src/datacentric/dc/attributes/class/: index_elements_attribute.cpp  index_elements_attribute.hpp
cpp/src/datacentric/dc/platform/activator/: ActivatorSettingsData.cpp  ActivatorSettingsData.hpp  ActivatorSettingsKey.cpp  ActivatorSettingsKey.hpp
cpp/src/datacentric/dc/platform/context/: Context.cpp  Context.hpp  IContext.cpp  IContext.hpp  context_base.cpp  context_base.hpp
cpp/src/datacentric/dc/platform/cursor/: CursorWrapper.hpp  cursor_wrapper.hpp
cpp/src/datacentric/dc/platform/data_set/: data_set_data.cpp  data_set_data.hpp  data_set_detail_data.cpp  data_set_detail_data.hpp  data_set_detail_key.cpp  data_set_detail_key.hpp  data_set_flags.hpp  data_set_key.cpp  data_set_key.hpp
cpp/src/datacentric/dc/platform/data_source/: DataSourceData.cpp  DataSourceData.hpp  DataSourceKey.cpp  DataSourceKey.hpp  DatabaseData.cpp  DatabaseData.hpp  DatabaseKey.cpp  DatabaseKey.hpp  DatabaseServerData.cpp  DatabaseServerData.hpp  DatabaseServerKey.cpp  DatabaseServerKey.hpp  IDataSource.cpp  IDataSource.hpp  InstanceType.hpp  data_source_data.cpp  data_source_data.hpp  data_source_key.cpp  data_source_key.hpp  database_data.cpp  database_data.hpp  database_key.cpp  database_key.hpp  database_server_data.cpp  database_server_data.hpp  database_server_key.cpp  database_server_key.hpp  env_type.hpp  instance_type.hpp
cpp/src/datacentric/dc/platform/dataset/: DataSetData.cpp  DataSetData.hpp  DataSetKey.cpp  DataSetKey.hpp  data_set_data.cpp  data_set_data.hpp  data_set_key.cpp  data_set_key.hpp
cpp/src/datacentric/dc/platform/locale/: CustomLocaleSettingsData.cpp  CustomLocaleSettingsData.hpp  DefaultLocaleSettingsData.cpp  DefaultLocaleSettingsData.hpp  LocaleSettingsData.cpp  LocaleSettingsData.hpp  LocaleSettingsKey.cpp  LocaleSettingsKey.hpp
cpp/src/datacentric/dc/platform/logging/: DefaultLogSettingsData.cpp  DefaultLogSettingsData.hpp  LogEntryType.hpp  LogSettingsData.cpp  LogSettingsData.hpp  LogSettingsKey.cpp  LogSettingsKey.hpp  LogVerbosity.hpp  log_entry_type.hpp  log_verbosity.hpp
cpp/src/datacentric/dc/platform/query/: IQuery.cpp  IQuery.hpp  Query.cpp  Query.hpp  query.cpp  query.hpp  query_.cpp  query_.hpp
cpp/src/datacentric/dc/platform/reflection/: ClassInfo.cpp  ClassInfo.hpp  DefaultClassMapSettings.hpp  IClassMapSettings.hpp  class_info.cpp  class_info.hpp
cpp/src/datacentric/dc/platform/settings/: DefaultSettings.hpp  ISettings.hpp  Settings.cpp  Settings.hpp  class_map_settings.hpp
cpp/src/datacentric/dc/platform/time_zone/: time_zone_data.cpp  time_zone_data.hpp  time_zone_key.cpp  time_zone_key.hpp
cpp/src/datacentric/dc/serialization/: BsonRecordSerializer.cpp  BsonRecordSerializer.hpp  BsonWriter.cpp  BsonWriter.hpp  CsvWriter.cpp  CsvWriter.hpp  DataWriter.cpp  DataWriter.hpp  ICsvReader.hpp  ICsvWriter.hpp  ITreeWriter.cpp  ITreeWriter.hpp  JsonRecordSerializer.cpp  JsonRecordSerializer.hpp  JsonWriter.cpp  JsonWriter.hpp  TupleWriter.cpp  TupleWriter.hpp  bson_record_serializer.cpp  bson_record_serializer.hpp  bson_writer.cpp  bson_writer.hpp  data_writer.cpp  data_writer.hpp  json_record_serializer.cpp  json_record_serializer.hpp  json_writer.cpp  json_writer.hpp  tree_writer_base.cpp  tree_writer_base.hpp  tuple_writer.cpp  tuple_writer.hpp
cpp/src/datacentric/dc/settings/: CustomSystemSettingsData.cpp  CustomSystemSettingsData.hpp  DefaultSystemSettingsData.cpp  DefaultSystemSettingsData.hpp  OperatingSystem.hpp  SettingsData.cpp  SettingsData.hpp  SettingsKey.cpp  SettingsKey.hpp  SystemSettingsData.cpp  SystemSettingsData.hpp  SystemSettingsKey.cpp  SystemSettingsKey.hpp
cpp/src/dotcpp-mongo/dot/mongo/: CMakeLists.txt  DotCpp.Mongo.Cpp.vcxproj  precompiled.cpp  precompiled.hpp
cpp/src/dotcpp-test/dot/test/: CMakeLists.txt  DotCpp.Test.Cpp.vcxproj  declare.hpp
cpp/src/dotcpp/dot/: DotCpp.Cpp.vcxproj  import.hpp  precompiled.cpp
cpp/src/dotcpp/dot/detail/: const_string_base.hpp  enum_macro.hpp  reference_counter.hpp  reflection_macro.hpp  struct_wrapper.hpp  traits.hpp
cpp/src/dotcpp/dot/noda_time/: LocalDate.cpp  LocalDate.hpp  LocalDateTime.hpp  LocalMinute.cpp  LocalMinute.hpp  LocalTime.hpp  Period.hpp  local_date.cpp  local_date.hpp  local_date_time.cpp  local_date_time.hpp  local_date_time_util.cpp  local_date_time_util.hpp  local_date_util.cpp  local_date_util.hpp  local_minute.cpp  local_minute.hpp  local_minute_util.cpp  local_minute_util.hpp  local_time.cpp  local_time.hpp  local_time_util.cpp  local_time_util.hpp  period.cpp  period.hpp
cpp/src/dotcpp/dot/serialization/: data_writer.cpp  data_writer.hpp  deserialize_attribute.cpp  deserialize_attribute.hpp  json_record_serializer.cpp  json_record_serializer.hpp  json_writer.cpp  json_writer.hpp  serialize_attribute.cpp  serialize_attribute.hpp  tree_writer_base.cpp  tree_writer_base.hpp  tuple_writer.cpp  tuple_writer.hpp
cpp/src/dotcpp/dot/system/: Array.hpp  Array1D.hpp  Nullable.hpp  Object.hpp  ObjectImpl.cpp  String.hpp  Type.cpp  Type.hpp  attribute.cpp  attribute.hpp  bool.cpp  bool.hpp  byte_array.cpp  byte_array.hpp  char.cpp  char.hpp  console.hpp  double.cpp  double.hpp  enum.cpp  enum.hpp  enum_impl.hpp  environment.cpp  environment.hpp  exception.cpp  exception.hpp  int.cpp  int.hpp  long.cpp  long.hpp  nullable.hpp  object.cpp  object.hpp  object_impl.cpp  object_impl.hpp  ptr.hpp  string.cpp  string.hpp  string_split_options.hpp  to_string.hpp  (+3 more)
(+247 files in other folders)
